# novel2gal

./: .env.example  .gitignore  LICENSE  README.md  start.sh
backend/: parse_test.json  pyproject.toml
backend/data/: engine_scenes.json  stories.json
backend/data/assets/character_brune_mung/: character_card.md  config.json
backend/data/assets/character_emerald_tablet/: character_card.md  config.json
backend/data/assets/character_friend_sister/: config.json
backend/data/assets/character_news_anchor/: config.json
backend/data/assets/character_night_dance/: character_card.md
backend/data/assets/character_nishiki_enrai/: character_card.md
backend/data/assets/character_suzuki_satoru/: character_card.md  config.json
backend/data/assets/character_the_traveler/: character_card.md
backend/data/assets/character_touch_me/: character_card.md  config.json
backend/data/assets/character_ulbert/: config.json
backend/scripts/: gen_images.py  gen_scenes.py  generate_tree.py  init_pipeline.py  parse_full.py  test_parse.py
backend/src/: server.py
backend/src/agent/: character_agent.py
backend/src/assets/: bgm_manager.py  generator.py  image_generator.py  tts_generator.py  tts_provider.py
backend/src/config/: __init__.py  llm_client.py  logging_config.py  models.py
backend/src/db/: store.py
backend/src/orchestrator/: player_setup.py  schemas.py  super_agent.py  three_zone.py  tree_generator.py
backend/src/parser/: chunker.py  epub_reader.py  novel_parser.py  schemas.py
backend/src/stories/: manager.py
(+344 files in other folders)
